# ros2_husky_inekf

./: CMakeLists.txt  package.xml
config/: noise.yaml  prior.yaml  settings.yaml
include/communication/: husky_comms.h  pose_publisher_node.hpp
include/estimator/: body_estimator.hpp
include/system/: husky_state.hpp  husky_system.hpp
include/utils/: camera_odom.hpp  husky_data.hpp  imu.hpp  joint_state.hpp  measurement.hpp  velocity.hpp
launch/: husky_estimator.launch.py
rosbag2_2025_09_13-13_08_05/: metadata.yaml  rosbag2_2025_09_13-13_08_05_0.db3
rviz/: default.rviz
src/: husky_estimator.cpp
src/communication/: gps_listener_node.cpp  husky_comms.cpp  path_publisher_node.cpp  pathmap_listener_node.cpp  pathodom_listener_node.cpp  pose_publisher_node.cpp
src/estimator/: body_estimator.cpp
src/system/: husky_state.cpp  husky_system.cpp
src/utils/: measurement.cpp
